# keymaker-ui

./: .gitignore  Dockerfile  README.md  app.py  cert.sh  crypto.py  initnonce.sh  pyproject.toml  requirements.txt  setup.py  setup.sh
src/keymaker_ui/: __init__.py  workflow.py
src/keymaker_ui/templates/: keymaker.html
static/js/: transcoder.js
templates/: index.html  result.html
